mijn and code's #2
Dit zijn mijn and click → translate animatie code's

--- a/style.css
+++ b/style.css
@@ -104,3 +104,21 @@ a[href="#design"] {
     scale:  2;
   }
 }
+
+/* #and */
+ a[href="#and"] {
+ 
+}
+
+
+div {
+  width: 10px;
+  height: 20px;
+
+
+}
+
+
+.moved {
+  transform: translate(10px, 30px);
+}
